# InvoiceMailer

./: .gitignore  Agents.md  app.py  app_env.py  client_directory.xlsx  config.dev.ini  config.py  kanban.md  main.ipynb  main.py  pyproject.toml  readme.md  requirements.txt  userReadMe.md  user_readme.md
.github/workflows/: build.yml
backend/: config.py  workflow.py
backend/db/: db.py  db_path.py  db_utility.py
backend/utility/: email.py  extract_pdf_text.py  read_xlsx.py
db/: db.py  db_path.py
docs/: ProductRequirements.md  RawInputs.md  changelog.md  code_audit.md  review_charter.md  system_contracts.md
gui/: app_gui.py  msal_device_code.py  utility.py
gui/notebook/: email_gui.py  scan_gui.py  send_gui.py  settings_gui.py  zip_gui.py
raw_data/: client_directory.xlsx
src/backend/: config.py  workflow.py
src/backend/db/: db.py  db_path.py  db_utility.py
src/backend/utility/: email.py  extract_pdf_text.py  send.py
src/gui/: app_gui.py  utility.py
src/gui/notebook/: email_gui.py  scan_gui.py  send_gui.py  settings_gui.py  zip_gui.py
tests/: dev_smtp_server.py  test_config.py  test_db.py  test_email_recipients.py  test_gui_utility.py  test_packaging_and_xlsx.py  test_workflow.py
tmp/dev_emails/: message_20251125_215603_348195.eml  message_20251125_215603_358096.eml
utility/: email.py  invoice_date.py  key_mgmt.py  packaging.py
