[project]
name = "invoicemailer"
version = "0.2.0"
requires-python = ">=3.12"
description = "Automated invoice mailer"
dependencies = [
    "aiosmtpd>=1.4.6",
    "cryptography>=46.0.7",
    "keyring>=25.7.0",
    "msal>=1.35.1",
    "nicemail>=0.2.1",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pywin32>=311 ; sys_platform == 'win32'",
]
